--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,12 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 14px;
+  background-color: black;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
